--- a/index.html
+++ b/index.html
@@ -4,127 +4,222 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AppBelieve Studio</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-    /* Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #f0f4f8; color: #1c1c1c; scroll-behavior: smooth; }
+  :root {
+    --primary-color: #0d3b66; /* Xanh đậm */
+    --secondary-color: #1f7a8c; /* Xanh trung gian */
+    --accent-color: #f4d35e; /* Vàng nhấn */
+    --bg-gradient: linear-gradient(135deg, #0d3b66 0%, #1f7a8c 100%);
+    --text-color: #ffffff;
+    --section-bg: #f8f9fa;
+    --card-bg: #ffffff;
+    --card-shadow: rgba(0,0,0,0.1);
+  }
 
-    /* Header */
-    header { position: sticky; top: 0; background: #0a3d62; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; z-index: 10; }
-    header h1 { color: #fff; font-family: 'Montserrat', sans-serif; font-size: 1.8rem; }
-    nav a { color: #fff; margin-left: 30px; text-decoration: none; font-weight: 500; transition: color 0.3s; }
-    nav a:hover { color: #f9ca24; }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+  }
 
-    /* Hero */
-    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 100vh; background: linear-gradient(135deg, #0a3d62, #4a69bd); color: #fff; padding: 0 20px; }
-    .hero h2 { font-family: 'Montserrat', sans-serif; font-size: 3rem; margin-bottom: 20px; }
-    .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 30px; }
-    .hero a { text-decoration: none; background: #f9ca24; color: #0a3d62; padding: 15px 30px; border-radius: 8px; font-weight: bold; transition: background 0.3s; }
-    .hero a:hover { background: #f7b731; }
+  body {
+    background: var(--section-bg);
+    color: #333;
+  }
 
-    /* Section */
-    section { padding: 80px 20px; max-width: 1200px; margin: auto; }
-    section h3 { font-family: 'Montserrat', sans-serif; font-size: 2rem; margin-bottom: 40px; text-align: center; color: #0a3d62; }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-    /* Our Apps Grid */
-    .apps-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; }
-    .app-card { background: #fff; padding: 30px 20px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between; transition: transform 0.3s, box-shadow 0.3s; }
-    .app-card:hover { transform: translateY(-8px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
-    .app-card h4 { font-family: 'Montserrat', sans-serif; font-size: 1.4rem; margin-bottom: 15px; color: #0a3d62; }
-    .app-card p { flex-grow: 1; margin-bottom: 20px; font-size: 0.95rem; color: #333; }
-    .app-card a { text-decoration: none; background: #0a3d62; color: #fff; padding: 10px 20px; border-radius: 6px; font-weight: 500; text-align: center; transition: background 0.3s; }
-    .app-card a:hover { background: #4a69bd; }
+  header {
+    background: var(--primary-color);
+    color: var(--text-color);
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
 
-    /* About & Contact */
-    .about-contact { display: flex; flex-direction: column; gap: 50px; max-width: 800px; margin: auto; }
-    .about-contact div { background: #fff; padding: 30px 20px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); }
-    .about-contact h4 { font-family: 'Montserrat', sans-serif; font-size: 1.6rem; margin-bottom: 15px; color: #0a3d62; }
-    .about-contact p { font-size: 1rem; color: #333; }
-    .about-contact a { color: #f9ca24; text-decoration: none; transition: color 0.3s; }
-    .about-contact a:hover { color: #f7b731; }
+  header .logo {
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
 
-    /* Footer */
-    footer { background: #0a3d62; color: #fff; text-align: center; padding: 30px 20px; font-size: 0.9rem; }
+  header nav a {
+    margin-left: 2rem;
+    font-weight: 600;
+    transition: color 0.3s;
+  }
 
-    /* Scroll animation */
-    .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.8s ease-out; }
-    .fade-in.show { opacity: 1; transform: translateY(0); }
+  header nav a:hover {
+    color: var(--accent-color);
+  }
 
-    @media (max-width: 768px) {
-        .hero h2 { font-size: 2.2rem; }
-        .hero p { font-size: 1rem; }
-        header { padding: 15px 20px; }
-        nav a { margin-left: 15px; font-size: 0.95rem; }
+  .hero {
+    background: var(--bg-gradient);
+    color: var(--text-color);
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+
+  .hero p {
+    font-size: 1.2rem;
+    max-width: 600px;
+    margin-bottom: 2rem;
+  }
+
+  .hero .btn {
+    background: var(--accent-color);
+    color: var(--primary-color);
+    font-weight: 600;
+    padding: 0.75rem 2rem;
+    border-radius: 50px;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .hero .btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  }
+
+  section {
+    padding: 4rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+  }
+
+  .card {
+    background: var(--card-bg);
+    border-radius: 12px;
+    box-shadow: 0 4px 15px var(--card-shadow);
+    padding: 2rem;
+    flex: 1 1 250px;
+    max-width: 350px;
+    text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+
+  .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 25px rgba(0,0,0,0.2);
+  }
+
+  .card h3 {
+    margin-bottom: 1rem;
+    font-weight: 600;
+    color: var(--primary-color);
+  }
+
+  .card p {
+    margin-bottom: 1.5rem;
+    font-size: 0.95rem;
+    line-height: 1.4;
+    color: #555;
+  }
+
+  .card .btn {
+    background: var(--secondary-color);
+    color: #fff;
+    font-weight: 600;
+    padding: 0.5rem 1.5rem;
+    border-radius: 50px;
+    display: inline-block;
+    transition: background 0.3s;
+  }
+
+  .card .btn:hover {
+    background: var(--primary-color);
+  }
+
+  footer {
+    background: var(--primary-color);
+    color: var(--text-color);
+    text-align: center;
+    padding: 2rem;
+  }
+
+  footer a {
+    color: var(--accent-color);
+  }
+
+  @media (max-width: 768px) {
+    .hero h1 {
+      font-size: 2.2rem;
     }
+
+    .hero p {
+      font-size: 1rem;
+    }
+
+    .cards {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 </style>
 </head>
 <body>
 
 <header>
-    <h1>AppBelieve Studio</h1>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
-    </nav>
+  <div class="logo">AppBelieve Studio</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
+  </nav>
 </header>
 
 <section class="hero" id="home">
-    <h2>Welcome to AppBelieve Studio</h2>
-    <p>We create high-quality, innovative mobile applications that are easy to use and enjoyable for everyone. Discover our apps and explore what we have to offer.</p>
-    <a href="#our-apps">Explore Our Apps</a>
+  <h1>Welcome to AppBelieve Studio</h1>
+  <p>We create high-quality apps to improve your digital experience. Explore our work below and stay connected with us!</p>
+  <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank" class="btn">Our Apps</a>
 </section>
 
-<section id="our-apps" class="fade-in">
-    <h3>Our Apps</h3>
-    <div class="apps-grid">
-        <div class="app-card">
-            <h4>App One</h4>
-            <p>High-quality wallpaper and personalization app. Easy to use, smooth performance, endless creativity.</p>
-            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
-        </div>
-        <div class="app-card">
-            <h4>App Two</h4>
-            <p>Discover unique tools to enhance productivity and organization in your daily life.</p>
-            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
-        </div>
-        <div class="app-card">
-            <h4>App Three</h4>
-            <p>Fun and creative app to express your personality and share with friends.</p>
-            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
-        </div>
+<section>
+  <div class="cards">
+    <div class="card">
+      <h3>About Us</h3>
+      <p>AppBelieve Studio focuses on delivering reliable and enjoyable apps. We prioritize user experience, privacy, and quality in every project.</p>
     </div>
-</section>
-
-<section class="about-contact fade-in">
-    <div>
-        <h4>About Us</h4>
-        <p>AppBelieve Studio is dedicated to developing innovative and user-friendly mobile applications. We focus on quality, simplicity, and a delightful user experience.</p>
+    <div class="card">
+      <h3>Our Apps</h3>
+      <p>Check out all our published apps on Google Play. Click below to explore everything we've created so far.</p>
+      <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank" class="btn">View on Google Play</a>
     </div>
-    <div>
-        <h4>Contact</h4>
-        <p>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></p>
-        <p>Website: <a href="https://appbelieve.github.io/" target="_blank">https://appbelieve.github.io/</a></p>
+    <div class="card">
+      <h3>Contact</h3>
+      <p>Have questions or feedback? Reach out to us via email and we'll respond promptly.</p>
+      <a href="mailto:dev.appbelieve@gmail.com" class="btn">Email Us</a>
     </div>
+  </div>
 </section>
 
 <footer>
-    &copy; 2025 AppBelieve Studio. All Rights Reserved.
+  &copy; 2025 AppBelieve Studio | <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a>
 </footer>
-
-<script>
-    // Scroll animation
-    const faders = document.querySelectorAll('.fade-in');
-    const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
-    const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll){
-        entries.forEach(entry => {
-            if(!entry.isIntersecting) return;
-            entry.target.classList.add('show');
-            appearOnScroll.unobserve(entry.target);
-        });
-    }, appearOptions);
-    faders.forEach(fader => { appearOnScroll.observe(fader); });
-</script>
 
 </body>
 </html>
